fix: habdle image error, userName css - nowrap

--- a/app/components/card/card.module.scss
+++ b/app/components/card/card.module.scss
@@ -13,6 +13,7 @@
   p {
     text-overflow: ellipsis;
     overflow: hidden;
+    text-wrap: nowrap;
   }
   img {
     border-radius: 50%;
